Fixed text alignment for name and price on home screen on smaller screens

--- a/mission-ceramics/src/styles/Home.scss
+++ b/mission-ceramics/src/styles/Home.scss
@@ -174,11 +174,6 @@
   .newsletter-registration p {
     width: 500px;
   }
-
-  .home-item-image {
-    width: 300px;
-    height: 300px;
-  }
 }
 
 @media (max-width: 1024px) {
@@ -199,6 +194,10 @@
   .home-item-image {
     width: 250px;
     height: 250px;
+  }
+  .home-item-name,
+  .home-item-price {
+    width: 250px;
   }
 }
 
@@ -221,6 +220,10 @@
     width: 225px;
     height: 225px;
   }
+  .home-item-name,
+  .home-item-price {
+    width: 225px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -237,6 +240,10 @@
   .home-item-image {
     width: 250px;
     height: 250px;
+  }
+  .home-item-name,
+  .home-item-price {
+    width: 250px;
   }
   .home-items-row {
     display: block;
